--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "17.0.23",
     "@types/react": "18.0.1",
     "@types/react-dom": "18.0.0",
+    "cypress": "^9.5.3",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.4",
     "typescript": "4.6.3"
